Add one comment

--- a/tax_avoidance_classification.ipynb
+++ b/tax_avoidance_classification.ipynb
@@ -245,6 +245,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21dfd95a",
+   "metadata": {},
+   "source": [
+    "There exists imbalance in the dataset, with class1 having significantly more samples than class2."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "b4d61fb3",
